fix(style): unwrap on mobile

--- a/src/Components/NoClick/NoClick.scss
+++ b/src/Components/NoClick/NoClick.scss
@@ -1,5 +1,5 @@
 .noclick {
-  min-width: 100px;
+  width: 120px;
   min-height: 75px;
   color: white;
   font-weight: 700;
